# lyrics-maid

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: dev-docker-image.yml  main-docker-image.yml
src/lyrics_maid/: __init__.py  __main__.py  cli.py  log.py  lyrics.py  store.py
